[package]
name = "singletact-programing-jig"
version = "0.1.0"
authors = ["Richard Osterloh <richard.osterloh@gmail.com>"]
edition = "2024"
rust-version = "1.90"

[[bin]]
name = "singletact-programing-jig"
path = "./src/bin/main.rs"
test = false

[[test]]
harness = false
name = "hello_test"

[lib]
test = false

[dependencies]
critical-section = "1.2.0"
defmt = "1.0.1"
embassy-embedded-hal = "0.5.0"
embassy-executor = { version = "0.7", features = ["task-arena-size-20480"] }
embassy-futures = "0.1.2"
embassy-sync = "0.7"
embassy-time = { version = "0.4" }
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
embedded-graphics = "0.8.1"
embedded-hal-async = "1.0.0"
esp-backtrace = { version = "0.17.0", optional = true, features = ["exception-handler", "panic-handler"] }
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c3"] }
esp-hal = { version = "=1.0.0-rc.0", features = ["unstable"] }
esp-hal-embassy = { version = "0.9.0" }
esp-hal-smartled = { version = "0.16.0", git = "https://github.com/esp-rs/esp-hal-community.git", branch = "main" }
fastrand = { version = "2.3.0", default-features = false }
heapless = { version = "0.9.1", features = ["portable-atomic", "ufmt"] }
# maybe-async-cfg = "=0.2.4"
panic-rtt-target = { version = "0.2.0", optional = true }
pca9548 = { git = "https://github.com/rosterloh/embedded-device-drivers.git", rev = "516f72ccffa083ab8fe026adf25b5c6fbafd6163", features = ["async"]  }
rtt-target = { version = "0.6.1", optional = true }
singletact = { git = "https://github.com/rosterloh/embedded-device-drivers.git", rev = "516f72ccffa083ab8fe026adf25b5c6fbafd6163", features = ["async"] }
smart-leds = "0.4.0"
ssd1306 = { version = "0.10.0", features = ["async"] }
static_cell = "2.1.1"
ufmt = "0.2.0"

[dev-dependencies]
embedded-test = { version = "0.6.0", features = [
  "defmt",
  "embassy",
  "external-executor",
] }

[features]
default = ["defmt", "esp32c3", "rtt"]

defmt = [
  "embassy-executor/defmt",
  "embassy-time/defmt",
  "embedded-hal-bus/defmt-03",
  "embedded-graphics/defmt",
  "esp-hal/defmt",
  "esp-hal-smartled/defmt",
  "dep:esp-backtrace",
  "esp-backtrace?/defmt",
  "heapless/defmt",
  "rtt-target?/defmt",
  "panic-rtt-target?/defmt",
]
esp32c3 = [
  "esp-hal/esp32c3",
  "esp-hal-smartled/esp32c3",
  # "dep:norfs-esp32c3",
  "esp-backtrace?/esp32c3",
  # "esp-wifi/esp32c3",
  "esp-hal-embassy/esp32c3",
]
rtt = ["dep:panic-rtt-target", "dep:rtt-target"]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false
